<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quản lý thời gian và công việc</string>
    <string name="leftmenu_tailai">"Tải lại"</string>
    <string name="nav_header_desc">Ứng dụng quản lý thời gian và công việc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_google_icon">Đăng nhập tài khoản Google</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <!--Thứ trong tuần-->
    <string name="T2">T2</string>
    <string name="T3">T3</string>
    <string name="T4">T4</string>
    <string name="T5">T5</string>
    <string name="T6">T6</string>
    <string name="T7">T7</string>
    <string name="CN">CN</string>
    <string name="ngaycv">dd/MM/yyyy</string>
    <string name="giocv">hh/mm Am</string>
    <string-array name="dslapcv">
        <item>Không có</item>
        <item>Hàng ngày</item>
        <item>Hàng tuần</item>
        <item>2 tuần một lần</item>
        <item>Hàng tháng</item>
        <item>Mỗi năm 1 lần</item>
    </string-array>
    <string-array name="dsthongbaocv">
        <item>Không có</item>
        <item>5 phút</item>
        <item>10 phút</item>
        <item>30 phút</item>
        <item>60 phút</item>
        <item>90 phút</item>
        <item>120 phút</item>
    </string-array>
    <string-array name="dsloc">
        <item>Công việc chưa hoàn thành</item>
        <item>Công việc đã hoàn thành</item>
        <item>Tất cả công việc</item>
    </string-array>
    <string-array name="dsthongke">
        <item>Ngày</item>
        <item>Tuần</item>
        <item>Tháng</item>
    </string-array>
</resources>
