<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity_Tuan"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_tuancv"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_grey_700"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Tuần"
            app:titleTextColor="@color/colorWhite"/>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#343434"
            android:id="@+id/ll_calendar_tuan"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >
                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp" >

                    <ImageButton
                        android:id="@+id/ib_prev_tuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/left_arrow" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_tuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="Tuần"
                        android:textColor="#4b4a4a"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chọn một ngày để xem công việc"
                        android:layout_centerHorizontal="true"
                        android:textColor="#4b4a4a"
                        android:textSize="18sp"
                        android:id="@+id/ngaybdkt_tuan"/>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp" >

                    <ImageButton
                        android:id="@+id/Ib_next_tuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/righ_arrow" />

                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_ngaycuatuan"
                android:orientation="vertical">
                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:background="#ffffff"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:paddingTop="6dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/cn_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/CN"
                            android:textColor="#4b4a4a" />

                        <TextView
                            android:id="@+id/t2_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/T2"
                            android:textColor="#4b4a4a" />

                        <TextView
                            android:id="@+id/t3_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/T3"
                            android:textColor="#4b4a4a" />

                        <TextView
                            android:id="@+id/t4_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/T4"
                            android:textColor="#4b4a4a" />

                        <TextView
                            android:id="@+id/t5_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/T5"
                            android:textColor="#4b4a4a" />

                        <TextView
                            android:id="@+id/t6_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/T6"
                            android:textColor="#4b4a4a" />

                        <TextView
                            android:id="@+id/t7_tuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/T7"
                            android:textColor="#4b4a4a" />

                    </TableRow>

                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="7"
                    android:background="@color/colorWhite"
                    android:id="@+id/listcv_tuan"></GridView>
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/ll_calendar_tuan"
            android:layout_height="match_parent">


        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>